1998-02-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.0.8.

	* lisp/gnus.el: Sync up with qgnus-0.34.

1998-02-28  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/message.el: Sync up with qgnus-0.33.

	* lisp/gnus-ems.el (gnus-bdf-image-file): New variable; moved from
	gnus.el.
	(gnus-mule-group-startup-message): New function; moved and renamed
	from `gnus-group-startup-message' of gnus.el.

	* lisp/gnus.el, lisp/gnus-sum.el, lisp/gnus-art.el,
	lisp/gnus-agent.el: Sync up with qgnus-0.33.

1998-02-28  Tatsuya Ichikawa  <t-ichi@niagara.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-bdf-image-file): New variable.
	(gnus-mule-group-startup-message): Display bitmap image using
	bitmap.el running with Emacs 20.
	
	* lisp/gnus-agent.el (gnus-agent-fetch-headers): Fix problem when
	Xref field is not exist.

1998-02-26  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* README.semi (How to join development): Modify for Semi-gnus
	mailing list.

	* lisp/gnus.el (gnus-version-number): Update to 6.0.7.

	* lisp/gnus.el (gnus-article-display-hook): Delete
	`gnus-article-de-quoted-unreadable' from options.

	* lisp/gnus-sum.el (gnus-article-make-menu-bar): Delete key for
	`gnus-article-de-quoted-unreadable'.
	(gnus-summary-make-menu-bar): Delete menu for
	`gnus-article-de-quoted-unreadable'.

	* lisp/gnus-art.el (gnus-article-make-menu-bar): Delete menu for
	`gnus-article-de-quoted-unreadable'.

1998-02-24  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus.el, lisp/message.el: Sync up with qgnus-0.32.

1998-02-23  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.0.6.

	* lisp/message.el (message-fill-references): Abolish unused local
	variables.

	* lisp/pop3.el, lisp/message.el, lisp/gnus.el, lisp/gnus-sum.el,
	lisp/gnus-art.el: Sync up with qgnus-0.31.

	* lisp/gnus.el, lisp/message.el, lisp/gnus-sum.el,
	lisp/gnus-art.el: Sync up with qgnus-0.30.
